Fixed collapsed footer overlaping content

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -1,5 +1,6 @@
 body {
   background: #fafafa;
+  margin-bottom: 100px;
 }
 
 h1 {
